--- a/src/asset/css/custom.css
+++ b/src/asset/css/custom.css
@@ -146,6 +146,25 @@
 
 /* Banner End */
 
+/* all h2 , small tag */
+h2{
+	margin:20px;
+	text-shadow: 2px 2px 10px rgba(0,0,0,0.05);
+	font-family: myriad pro;
+	font-weight: 700;
+	letter-spacing: 2px;
+	text-align: center;
+	font-size:2rem;
+	color:#323543;
+}
+
+small {
+    color:	#7A72FF;
+    }
+
+
+
+
 /*  nav-menu */
 
  .menu-logo{
@@ -268,11 +287,7 @@
      /* background-color: rgb(214, 212, 212);  */
      padding-bottom: 35px; 
 }
-  .tech-title{
-      color:#f7a10c ;
-      margin-bottom: 35px;
-     
-  }
+
   .analysis-content{
       font-size: 18px;
       text-align: justify;
@@ -339,3 +354,131 @@
 }
 
 
+/* Recent Projects */
+
+.projectSection {
+
+	background-color: #FFFFFF;
+	box-shadow: 2px 2px 30px rgba(167, 158, 245, 0.2);
+	margin:30px auto;
+	align-items: center;
+	padding:40px 20px;
+	margin-top: 50px;
+	position: relative;
+	/* background-size:1000px; */
+	border-radius: 10px;
+}
+
+.project{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	margin: 10px 0px;
+	width:100%;
+}
+
+
+
+.projectBox{
+	width:290px;
+	height: 350px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	border-radius: 8px;
+	position: relative;
+	margin: 10px 30px;
+  
+    padding-bottom: 20px;
+   /* background-color: rgb(247, 243, 243); */
+
+}
+
+.projectBox img {
+	height: 170px;
+   
+}
+
+ .projectBox p{
+	/* color:#4d4d4d70; */
+	font-family: myriad pro;
+	font-size: 0.9rem;
+	letter-spacing: 0.5;
+    text-align: center;
+} 
+.projectBox a{
+	color:#2c2c2c;
+	font-family: poppins;
+	font-size: 1rem;
+}
+
+.detailBtn{
+	position: absolute;
+	width:140px;
+	height: 40px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-family:calibri;
+	left: 50%;
+	bottom: -20px;
+	transform: translateX(-50%);
+	border-radius: 15% 15% 15% 15% / 50% 50% 50% 50%;
+	background:linear-gradient(120deg,#6b60ec 20%,#a166f4);
+	color:#FFFFFF;
+	/* display: none; */
+	animation: fade 0.2s;
+}
+
+/* .courseBox:hover .detailBtn{
+	display: flex;
+} */
+
+.projectBox:hover{
+	box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.1);
+	background-color:#FFFFFF;
+}
+/* .projectBox:hover Button{
+	color: #fff;
+	transition: all ease 0.5s;
+	
+} */
+
+
+/*  Course section */
+
+.courseSection {
+	background-color: #FFFFFF;
+	box-shadow: 2px 2px 30px rgba(167, 158, 245, 0.2);
+	margin:30px auto;
+	align-items: center;
+	padding:40px 20px;
+	margin-top: 50px;
+	margin-bottom: 30px;
+	position: relative;
+	border-radius: 10px;
+}
+
+.courseImg{
+    width: 100%;
+}
+
+.courseDetails{
+    font-family: myriad pro;
+    font-size: 16;
+    font-weight: 500;
+   text-decoration: none;
+}
+
+.courseDetails:hover{
+	background-color: #2f2e41;
+	border-radius: 10px;
+	color:#fff;
+	font-family: calibri;
+	font-weight: 600;
+    cursor: pointer;
+    border: transparent !important;
+    padding: 5px 10px;
+}
